objects/PRH_Objectives__c.object
<CustomObject>
    <description>PRH Objectives</description>
    <fields>
        <fullName>PRH_Brand_Name__c</fullName>
        <formula>PRH_Iconic_Brand__r.Name</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRH_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRH_Iconic_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Iconic Brand</label>
        <referenceTo>PRH_Brand_Luxury_Brand__c</referenceTo>
        <relationshipName>Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRH_Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRH_Number_of_Outlets__c</fullName>
        <label>Number of Outlets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRH_Objective__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Objective</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRH_Presence__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Presence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Iconic Objective</label>
    <nameField>
        <displayFormat>OBJ-{000000000}</displayFormat>
        <label>Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Iconic Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>